# pbl_go1_oige

./: .gitignore  .gitmodules  README.md
Docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
OmniIsaacGymEnvs/: .gitignore
OmniIsaacGymEnvs/omniisaacgymenvs/USD/: bb.usd  check.py  check_camera.py  check_prim.py  usd_edit.py
OmniIsaacGymEnvs/omniisaacgymenvs/cfg/: config.yaml
OmniIsaacGymEnvs/omniisaacgymenvs/cfg/task/: A1.yaml  (+2 more)
OmniIsaacGymEnvs/omniisaacgymenvs/exts/: unitree_vision2.py
OmniIsaacGymEnvs/omniisaacgymenvs/scripts/: rlgames_demo.py  rlgames_train.py  rlgames_train_mt.py
OmniIsaacGymEnvs/omniisaacgymenvs/tasks/: a1.py  go1_bb.py  go1_horizontal.py  go1_vertical.py
OmniIsaacGymEnvs/omniisaacgymenvs/utils/: task_util.py
OmniIsaacGymEnvs/unitree_ws/devel/: .catkin  local_setup.sh
OmniIsaacGymEnvs/unitree_ws/src/qre_msgs/: CMakeLists.txt  README.md  package.xml
OmniIsaacGymEnvs/unitree_ws/src/qre_msgs/msg/: BodyPose.msg  HighGymCmd.msg  JointCMD.msg  LowGymCmd.msg  PointArray.msg
OmniIsaacGymEnvs/unitree_ws/src/qre_msgs/srv/: SetBodyPose.srv  SetControl.srv
docker/isaac-sim/config/: omniverse.toml
omniisaacgymenvs/cfg/task/: Go1.yaml  Go1_Horizontal.yaml  Go1_Vertical.yaml
omniisaacgymenvs/cfg/train/: Go1PPO.yaml  Go1_HorizontalPPO.yaml  Go1_VerticalPPO.yaml
omniisaacgymenvs/patch/: README.md  a2c_continuous.py  torch_ext.py
omniisaacgymenvs/robots/articulations/: go1.py
omniisaacgymenvs/scripts/: rlgames_train.py
omniisaacgymenvs/tasks/: go1.py  go1_horizontal.py  go1_vertical.py
omniisaacgymenvs/utils/: task_util.py
(+190 files in other folders)
